added spin wheel module in popup

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -13,7 +13,7 @@
 
     <molla-home-slider></molla-home-slider>
 
-    <!-- <molla-modal-basic></molla-modal-basic> -->
+    <molla-modal-basic></molla-modal-basic>
 
     <!--  bootstrap slider component end  -->
 
@@ -78,7 +78,8 @@
 
     <div class="second-section container position-relative">
         <div class="row">
-            <div class="col-sm-6 mb-2" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 1,'page':1}">
+            <div class="col-sm-6 mb-2"
+                routerLink="/product/Keyboard%20Mouse/Geonix%20Wireless%20keyboard%20mouse%20combo-%20GXWBK-01%20GXWBM-01">
                 <div class="product-image one">
 
                 </div>
@@ -95,7 +96,8 @@
 
                 </div>
             </div>
-            <div class="col-sm-6 mb-2" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 2,'page':1}">
+            <div class="col-sm-6 mb-2"
+                routerLink="/product/Keyboard%20Mouse/Geonix%20Wired%20keyboard%20mouse%20combo-GXBK-01%20GXBM-01">
                 <div class="product-image four">
 
                 </div>
@@ -488,6 +490,8 @@
             </a>
         </owl-carousel>
     </div>
+
+    <!-- <button (click)="wheel.spin()">get a prize</button> -->
 
     <!-- <div class="whatsappmenu">
         <img src="./assets/images/whatsapp-icon.jpg" class="img-fluid">
