--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1162,7 +1162,7 @@ a{
 }
 
 .one {
-    background-image: url('/assets/images/banner1-1.png');
+    background-image: url('/assets/images/WIRELESS\ KEYBOARD\ AND\ MOUSE.jpg');
 }
 
 .two {
@@ -1174,7 +1174,7 @@ a{
 }
 
 .four {
-    background-image: url('/assets/images/3\ IN\ 1\ COMBINE.jpg');
+    background-image: url('/assets/images/WIRED\ KEYBOARD\ AND\ MOUSE.jpg');
 }
 
 .center-content {
