--- a/src/app/pages/shop/shared/sidebar/shop-sidebar-one/shop-sidebar-one.component.html
+++ b/src/app/pages/shop/shared/sidebar/shop-sidebar-one/shop-sidebar-one.component.html
@@ -14,52 +14,98 @@
 
             <div class="collapse show" id="widget-1">
                 <div class="widget-body pt-0">
-                   <div  class="filter-items filter-items-count">
-                    <div  class="filter-item ng-star-inserted">
-                        <a  href="/shop/SSD%20M.2/3cols?category=7&amp;page=1">SSD M.2</a>
-                        <span  class="item-count">4</span></div>
-                    <div  class="filter-item ng-star-inserted">
-                        <a  href="/shop/M%20SATA/3cols?category=16&amp;page=1">M SATA</a>
-                        <span  class="item-count">3</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/External%20SSD%20SATA/3cols?category=21&amp;page=1">External SSD SATA</a>
-                        <span  class="item-count">4</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/SSD%20M.2%20BREAKABLE/3cols?category=14&amp;page=1">SSD M.2 BREAKABLE</a>
-                        <span  class="item-count">2</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/External%20SSD%20M.2/3cols?category=19&amp;page=1">External SSD M.2</a>
-                        <span  class="item-count">4</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Printer%20Tonner/3cols?category=15&amp;page=1">Printer Tonner</a>
-                        <span  class="item-count">7</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/SSD%20NVMe/3cols?category=8&amp;page=1">SSD NVMe</a>
-                        <span  class="item-count">4</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/SSD%20Enclosure/3cols?category=18&amp;page=1">SSD Enclosure</a>
-                        <span  class="item-count">3</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Laptop%20RAM/3cols?category=4&amp;page=1">Laptop RAM</a>
-                        <span  class="item-count">8</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Desktop%20RAM/3cols?category=1&amp;page=1">Desktop RAM</a>
-                        <span  class="item-count">6</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Graphic%20Card/3cols?category=12&amp;page=1">Graphic Card</a>
-                        <span  class="item-count">3</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Geonix%20SSD/3cols?category=6&amp;page=1">Geonix SSD</a>
-                        <span  class="item-count">4</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Motherboard/3cols?category=13&amp;page=1">Motherboard</a>
-                        <span  class="item-count">8</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Laptop%20HDD/3cols?category=3&amp;page=1">Laptop HDD</a>
-                        <span  class="item-count">3</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Riser%20Card/3cols?category=5&amp;page=1">Riser Card</a>
-                            <span  class="item-count">1</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Monitors/3cols?category=11&amp;page=1">Monitors</a>
-                        <span  class="item-count">5</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/HDD%20%E2%80%93%20Hard%20Disk%20Drive/3cols?category=2&amp;page=1">HDD – Hard Disk Drive</a>
-                        <span  class="item-count">6</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/PCI%20CARDS/3cols?category=17&amp;page=1">PCI CARDS</a>
-                        <span  class="item-count">13</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/Wifi/3cols?category=10&amp;page=1">Wifi</a>
-                        <span  class="item-count">1</span></div>
-                    <div  class="filter-item ng-star-inserted"><a  href="/shop/External%20SSD%20NVME/3cols?category=20&amp;page=1">External SSD NVME</a>
-                            <span  class="item-count">4</span></div><!----></div>  
-                      
-                           
-                        <!-- <div class="filter-item">
+                    <div class="filter-items filter-items-count">
+                        <div class="filter-item ng-star-inserted">
+                            <a href="/shop/SSD%20M.2/3cols?category=7&amp;page=1">SSD M.2</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted">
+                            <a href="/shop/M%20SATA/3cols?category=16&amp;page=1">M SATA</a>
+                            <span class="item-count">3</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/External%20SSD%20SATA/3cols?category=21&amp;page=1">External SSD SATA</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/SSD%20M.2%20BREAKABLE/3cols?category=14&amp;page=1">SSD M.2 BREAKABLE</a>
+                            <span class="item-count">2</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/External%20SSD%20M.2/3cols?category=19&amp;page=1">External SSD M.2</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Printer%20Tonner/3cols?category=15&amp;page=1">Printer Tonner</a>
+                            <span class="item-count">7</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/SSD%20NVMe/3cols?category=8&amp;page=1">SSD NVMe</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/SSD%20Enclosure/3cols?category=18&amp;page=1">SSD Enclosure</a>
+                            <span class="item-count">3</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Laptop%20RAM/3cols?category=4&amp;page=1">Laptop RAM</a>
+                            <span class="item-count">8</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Desktop%20RAM/3cols?category=1&amp;page=1">Desktop RAM</a>
+                            <span class="item-count">6</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Graphic%20Card/3cols?category=12&amp;page=1">Graphic Card</a>
+                            <span class="item-count">3</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Geonix%20SSD/3cols?category=6&amp;page=1">Geonix SSD</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Motherboard/3cols?category=13&amp;page=1">Motherboard</a>
+                            <span class="item-count">8</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Laptop%20HDD/3cols?category=3&amp;page=1">Laptop HDD</a>
+                            <span class="item-count">3</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Riser%20Card/3cols?category=5&amp;page=1">Riser Card</a>
+                            <span class="item-count">1</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Monitors/3cols?category=11&amp;page=1">Monitors</a>
+                            <span class="item-count">5</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/HDD%20%E2%80%93%20Hard%20Disk%20Drive/3cols?category=2&amp;page=1">HDD –
+                                Hard Disk Drive</a>
+                            <span class="item-count">6</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/PCI%20CARDS/3cols?category=17&amp;page=1">PCI CARDS</a>
+                            <span class="item-count">13</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/Wifi/3cols?category=10&amp;page=1">Wifi</a>
+                            <span class="item-count">1</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/External%20SSD%20NVME/3cols?category=20&amp;page=1">External SSD NVME</a>
+                            <span class="item-count">4</span>
+                        </div>
+                        <div class="filter-item ng-star-inserted"><a
+                                href="/shop/keyboard-and-mouse/3cols?category=23&amp;page=1">Keyboard/Mouse</a>
+                            <span class="item-count">2</span>
+                        </div>
+
+                        <!---->
+                    </div>
+
+
+                    <!-- <div class="filter-item">
                             <a [routerLink]="['/shop/'+list.key+'/3cols/']" [queryParams]="{category: list.id,'page':1}">{{list.key}}</a>
                                 
                             <span class="item-count">{{list.value}}</span>
