--- a/src/app/shared/components/headers/header/header.component.html
+++ b/src/app/shared/components/headers/header/header.component.html
@@ -97,114 +97,181 @@
                         <li class="megamenu-main">Categories <i class="fa-solid fa-chevron-down"></i>
                             <div class="megamenu-child">
                                 <div class="div-category">
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 1,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/desktopram.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 1,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/desktopram.png" class="img-fluid">
+                                            </div>
+                                            <p>Desktop Ram</p>
                                         </div>
-                                        <p>Desktop Ram</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 4,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/laptopram.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 4,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/laptopram.png" class="img-fluid">
+                                            </div>
+                                            <p>Laptop Ram</p>
                                         </div>
-                                        <p>Laptop Ram</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 2,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/desktophdd.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 2,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/desktophdd.png" class="img-fluid">
+                                            </div>
+                                            <p>Desktop HDD</p>
                                         </div>
-                                        <p>Desktop HDD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 3,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/laptophdd.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 3,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/laptophdd.png" class="img-fluid">
+                                            </div>
+                                            <p>Laptop HDD</p>
                                         </div>
-                                        <p>Laptop HDD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 6,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/sata.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 6,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/sata.png" class="img-fluid">
+                                            </div>
+                                            <p>SATA SSD</p>
                                         </div>
-                                        <p>SATA SSD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 16,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/M SATA.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 16,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/M SATA.png" class="img-fluid">
+                                            </div>
+                                            <p>M SATA SSD</p>
                                         </div>
-                                        <p>M SATA SSD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 7,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/m.2 ssd.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 7,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/m.2 ssd.png" class="img-fluid">
+                                            </div>
+                                            <p>M.2 SSD</p>
                                         </div>
-                                        <p>M.2 SSD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 14,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/BREAKABLESSD.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 14,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/BREAKABLESSD.png" class="img-fluid">
+                                            </div>
+                                            <p>M.2 BREAKABLE SSD</p>
                                         </div>
-                                        <p>M.2 BREAKABLE SSD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 8,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/NVME SSD FRONT PNG.png"
-                                                class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 8,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/NVME SSD FRONT PNG.png"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>NVME SSD</p>
                                         </div>
-                                        <p>NVME SSD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 5,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/RISER CARD PNG.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 5,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/RISER CARD PNG.png"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>RISER CARD</p>
                                         </div>
-                                        <p>RISER CARD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 10,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/WIFI ADAPTER PNG.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 10,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/WIFI ADAPTER PNG.png"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>WIFI USB ADAPTER</p>
                                         </div>
-                                        <p>WIFI USB ADAPTER</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 18,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/ecclouser.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 18,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/ecclouser.png" class="img-fluid">
+                                            </div>
+                                            <p>SSD ENCLOSURE</p>
                                         </div>
-                                        <p>SSD ENCLOSURE</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 17,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/pci.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 17,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/pci.png" class="img-fluid">
+                                            </div>
+                                            <p>PCI CARDS</p>
                                         </div>
-                                        <p>PCI CARDS</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 22,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/smps.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 22,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/smps.png" class="img-fluid">
+                                            </div>
+                                            <p>SMPS</p>
                                         </div>
-                                        <p>SMPS</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 15,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/2365 PRINTER.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 15,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/2365 PRINTER.png" class="img-fluid">
+                                            </div>
+                                            <p>PRINTER TONER</p>
                                         </div>
-                                        <p>PRINTER TONER</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 11,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/pc monitor.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 11,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/pc monitor.png" class="img-fluid">
+                                            </div>
+                                            <p>PC MONITORS</p>
                                         </div>
-                                        <p>PC MONITORS</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 12,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/GRAPHIC CARD png.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 12,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/GRAPHIC CARD png.png"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>GRAPHIC CARD</p>
                                         </div>
-                                        <p>GRAPHIC CARD</p>
                                     </div>
-                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 13,'page':1}">
-                                        <div class="image">
-                                            <img src="./assets/images/pcategory/motherboard.png" class="img-fluid">
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 13,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/motherboard.png" class="img-fluid">
+                                            </div>
+                                            <p>MOTHERBOARD</p>
                                         </div>
-                                        <p>MOTHERBOARD</p>
+                                    </div>
+                                    <div class="menu-cat-image" [routerLink]="['shop/sidebar/3cols/']"
+                                        [queryParams]="{category: 23,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/keyboard-mouse.jpeg"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>KAYRBOARD AND MOUSE</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
