--- a/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
+++ b/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
@@ -185,6 +185,14 @@
                         </div>
                     </a>
                 </li>
+                <li class="item-lead" routerLinkActive="active">
+                    <a routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 23,'page':1}">
+                        <div>
+                            <img src="/assets/images/icons/keyboard-and-mouse.png" class="img-fluid">
+                            Keyboard/Mouse
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
