--- a/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
+++ b/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
@@ -200,6 +200,12 @@
                                     Motherboard
                                 </a>
                             </li>
+                            <li>
+                                <a class="drop-mobile-menu" routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 23,'page':1}">
+                                    <img src="/assets/images/icons/keyboard-and-mouse.png" class="img-fluid">
+                                    Keyboard/Mouse
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </ng-template>
