--- a/src/app/pages/home/index/modal-basic/modal-basic.component.scss
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.scss
@@ -1,15 +1,15 @@
 
 
 .modal-body {
-    background-image: linear-gradient(171deg, #27aae1, #002d64);
+    // background-image: linear-gradient(171deg, #27aae1, #002d64);
     padding: 0px;
-    max-width: 60%;
+    max-width: 75%;
     margin: auto;
     border-radius: 5px;
 
     button.btn-close {
         position: absolute;
-        right: 10px;
+        right: -7%;
         top: 5px;
         font-size: 30px;
         color: white;
@@ -54,6 +54,11 @@
     .popuplast-discription {
         color: rgb(240, 239, 239);
     }
+
+    .oppupimage {
+        cursor: pointer;
+    }
+
     }
 }
 
@@ -64,7 +69,9 @@
     // }
 
     .modal-body {
-        padding: 7vw;
+        padding: 5vw;
+        max-width: 85%;
+
         .bodymain-div {    
             .oppupfirst-heading {
                 font-size: 3vw;
@@ -85,4 +92,37 @@
             }
         }
     }
+}
+
+// wheel style starts here
+
+text{
+    font-family:Helvetica, Arial, sans-serif;
+    font-size:11px;
+    pointer-events:none;
+}
+#chart{
+    position:absolute;
+    width:500px;
+    height:500px;
+    top:0;
+    left:0;
+}
+#question{
+    position: absolute;
+    width:400px;
+    height:500px;
+    top:0;
+    left:520px;
+}
+#question h1{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    top:50%;
+    -webkit-transform:translate(0,-50%);
+            transform:translate(0,-50%);
 }
