--- a/src/app/shared/components/headers/header/header.component.scss
+++ b/src/app/shared/components/headers/header/header.component.scss
@@ -76,6 +76,14 @@
                                 padding: 10px;
                                 min-width: 150px;
                                 text-align: center;
+                                max-width: 130px;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                            }
+
+                            .menu-cat-image:active {
+                                background-color: rgb(233, 233, 233);
                             }
                         }
 
