--- a/src/app/shared/components/headers/shared/cart-menu/cart-menu.component.html
+++ b/src/app/shared/components/headers/shared/cart-menu/cart-menu.component.html
@@ -18,7 +18,7 @@
                     <div class="product-cart-details">
                         <h4 class="product-title">
                             
-                            <a [routerLink]="['/product/Geonix/'+ product.inventory.product.name]">{{ product.inventory.product.name }}</a>
+                            <a [routerLink]="['/product/Geonix/'+ product.inventory.product.productUrl]">{{ product.inventory.product.name }}</a>
                         </h4>
 
                         <span class="cart-product-info">
@@ -33,7 +33,7 @@
                     </div>
 
                     <figure class="product-image-container">
-                        <a [routerLink]="['/product/Geonix/'+ product.inventory.product.name]" class="product-image">
+                        <a [routerLink]="['/product/Geonix/'+ product.inventory.product.productUrl]" class="product-image">
                             <img [src]=" product.inventory.product.image" alt="product" width="50" height="50">
                         </a>
                     </figure>
