--- a/src/app/shared/components/product/product-nine/product-nine.component.html
+++ b/src/app/shared/components/product/product-nine/product-nine.component.html
@@ -7,7 +7,7 @@
                 <span class="product-label label-top" *ngIf="product.top">Top</span>
                 <span class="product-label label-out" *ngIf="product.qty || product.qty == 0">Out Of Stock</span>
                
-                <a [routerLink]="['/product/'+product.category.name+'/'+ product.name]">
+                <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">
                    
                     <molla-image [src]="product.image" alt="Product"
                         
@@ -30,7 +30,7 @@
                 </div>
 
                 <h3 class="product-title">
-                    <a [routerLink]="['/product/'+product.category.name+'/'+ product.name]">{{product.name }}</a>
+                    <a [routerLink]="['/product/'+product.category.name+'/'+ product.productUrl]">{{product.name }}</a>
                 </h3>
 
                 <!-- <div class="product-content">
